Refactor project structure and remove obsolete files
- Deleted test files for models and Supabase connectivity tests.
- Removed outdated docker-compose.yml specific to the MEDSC-Monolitica directory.
- Eliminated cleanup_console_logs.py script for console log removal in JS/TS files.
- Updated main docker-compose.yml to reflect new backend directory structure.
- Removed Windows PowerShell and Bash startup scripts for container initialization.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   # Backend Flask
   backend:
     build: 
-      context: ./MEDSC-Monolitica/app
+      context: ./Backend/app
       dockerfile: Dockerfile
     container_name: medsc_backend
     restart: always
@@ -38,7 +38,7 @@ services:
     networks:
       - medsc-network
     volumes:
-      - ./MEDSC-Monolitica/app:/app
+      - ./Backend/app:/app
     command: python index.py
 
   # Frontend Next.js
